Clean Up / Fixes

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,7 +1,17 @@
 It's Just Code Changelog
 ------------------------
 
-Version 0.10
+Version 0.3
+~~~~~~~~~~~~
+
+- Added Plural, Singular filters
+
+Version 0.2
+~~~~~~~~~~~~
+
+- Misc Bug Fixes
+
+Version 0.1
 ~~~~~~~~~~~~
 
 - Started
